--- a/QuizApp/style.css
+++ b/QuizApp/style.css
@@ -17,6 +17,41 @@ body {
     background: #52ab98;
 }
 
+/*Media query code for mobile screens*/
+@media (max-width: 624px) {
+
+    .config-container,
+    .quiz-container .quiz-content {
+        padding: 20px;
+    }
+
+    .quiz-content .answer-option {
+        padding: 12px 10px 12px 14px;
+    }
+
+    .config-container .question-options {
+        padding: 0 15px;
+    }
+
+    .quiz-container .quiz-header,
+    .quiz-container .quiz-footer {
+        padding: 13px 20px;
+    }
+
+    .quiz-header .quiz-title,
+    .quiz-content .quiz-footer {
+        font-size: 1.3rem;
+    }
+
+    .result-container {
+        padding: 40px 20px;
+    }
+
+    .result-container .result-title {
+        font-size: 1.4rem;
+    }
+}
+
 :where(.config-container, .quiz-container, .result-container) {
     display: none;
     background: #fff;
@@ -225,6 +260,7 @@ body {
 .result-container .result-title {
     margin-top: 30px;
 }
+
 
 .result-container .result-message {
     font-size: 1.125rem;
